--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.3.9"
   }
