--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -22,6 +23,7 @@
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "swiper": "^10.0.4",
     "tailwindcss": "^3.3.3",
     "vite": "^4.3.9"
   }
