--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.262.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
