--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "pinia": "^2.1.6",
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
