--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "json-server --watch db.json --port 3004"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "lucide-vue-next": "^0.262.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -21,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "json-server": "^0.17.4",
     "pinia": "^2.1.6",
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
