--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "lucide-vue-next": "^0.262.0",
     "vue": "^3.3.4",
+    "vue-content-loader": "^2.0.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
