--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "lucide-vue-next": "^0.262.0",
+    "slugify": "^1.6.6",
     "vue": "^3.3.4",
     "vue-content-loader": "^2.0.1",
     "vue-router": "^4.2.4"
